force-app/main/default/objects/Partner_Maturity_Status__c/Partner_Maturity_Status__c.object-meta.xml
<CustomObject>
    <label>Partner Maturity Status</label>
    <nameField>
        <label>Partner Maturity Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Maturity Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>