force-app/main/default/objects/Partner_Maturity_Status__c/fields/Action_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Code__c</fullName>
    <externalId>true</externalId>
    <label>Action Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>