force-app/main/default/objects/Partner_Maturity_Status__c/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <label>Action Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>