force-app/main/default/objects/Partner_Maturity_Status__c/fields/EST_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>EST_Complete_Date__c</fullName>
    <label>EST Complete Date</label>
    <type>Date</type>
</CustomField>