force-app/main/default/objects/Partner_Maturity_Status__c/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <label>HelpText</label>
    <type>TextArea</type>
</CustomField>