force-app/main/default/objects/Partner_Maturity_Status__c/fields/Maturity_Level__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Level__c</fullName>
    <formula>Partner_Maturity_Level__r.Name</formula>
    <label>Maturity Level</label>
    <type>Text</type>
</CustomField>