force-app/main/default/objects/Partner_Maturity_Status__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <length>1</length>
    <type>Text</type>
</CustomField>