force-app/main/default/objects/Partner_Maturity_Status__c/fields/Partner_Maturity_Level__c.field-meta.xml
<CustomField>
    <fullName>Partner_Maturity_Level__c</fullName>
    <label>Partner Maturity Level</label>
    <referenceTo>Partner_Maturity_Level__c</referenceTo>
    <relationshipLabel>Partner Maturity Status</relationshipLabel>
    <relationshipName>Partner_Maturity_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>