force-app/main/default/objects/Partner_Maturity_Status__c/validationRules/Date_Completed_should_not_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Completed_should_not_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Completed__c &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Date Completed should not be a future date.</errorMessage>
</ValidationRule>